[tool.poetry]
name = "jwt-fastapi-tianolo"
version = "0.1.0"
description = ""
authors = ["enterspacebs <anotherhell48@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "jwt_fastapi_tianolo"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
